# argus-main

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
SDLVisualization/: CMakeLists.txt
SDLVisualization/include/: SDLUI.h
SDLVisualization/src/: SDLUI.cpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  Events.cpp  Events.h  RandomWrapper.cpp  RandomWrapper.h  main.cpp  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
src/ArgusClient/: ArgusClient.cpp  ArgusClient.h  CMakeLists.txt
src/ArgusConfig/: ArgusConfig.cpp  ArgusConfig.h  CMakeLists.txt  ControllerConfig.cpp  ControllerConfig.h
src/ArgusController/: .ArgusController.h.swp  ArgusController.cpp  ArgusController.h  ArgusControllerManager.cpp  ArgusControllerManager.h  CMakeLists.txt  ControllerEvents.h  IMUData.h  VideoFrame.cpp  VideoFrame.h
src/ArgusDeviceManager/: ArgusDevice.cpp  ArgusDevice.h  ArgusDeviceManager.cpp  ArgusDeviceManager.h  CMakeLists.txt
src/ArgusEventQueue/: ArgusEventQueue.cpp  ArgusEventQueue.h  CMakeLists.txt
src/ArgusSystemHolder/: ArgusSystemHolder.cpp  ArgusSystemHolder.h  CMakeLists.txt
src/ArgusViewer/: ArgusViewer.cpp  ArgusViewer.h  CMakeLists.txt
src/KalmanFilter/: AccelerationMeasurementModel.hpp  CMakeLists.txt  KalmanFilter.hpp  OrientationMeasurementModel.hpp  PositionMeasurementModel.hpp  RotationMeasurementModel.hpp  SystemModel.hpp
src/KalmanFilter_/: AccelerationMeasurementModel.hpp  CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  OrientationMeasurementModel.hpp  SystemModel.hpp
src/Network/: CMakeLists.txt  ConnectionTCP.cpp  ConnectionTCP.h  ServerTCP.cpp  ServerTCP.h
